# PythonRobotics

./: .buildinfo  .coveralls.yml  .gitignore  .gitmodules  .pylintrc  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Python Program to Print all Prime Numbers in an Interval  README(PT-BR).md  README.md  README.pt-BR.md  README_original.md  SECURITY.md  Takeoff_arm.py  Template.md.docx  _config.yml  appveyor.yml  codecov.yml  coverage_info.txt  environment.yml  genindex.html  getting_started.html  git_diff_checker.sh  how_to_contribute.html  index.html  main  objects.inv  pose_optimization_slam_3d.py  py-modindex.html  pyproject.toml  requirements.txt  ruff.toml  rundiffstylecheck.sh  runtests.sh  search.html  searchindex.js  settings.json  setup.py  (+3 more)
.circleci/: artifact_path  config.yml
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
AerialNavigation/: Quadrotor.py  quad_sim.py
Astar-matplotlib/: README.md  setup.py
DSentinel/: d_sentinel.sh
Introduction/: introduction.ipynb
InvertedPendulum/: inverted_pendulum_lqr_control.py  inverted_pendulum_mpc_control.py
InvertedPendulumCart/: inverted_pendulum_mpc_control.py
Localization/: Kalmanfilter_basics.ipynb  Kalmanfilter_basics_2.ipynb  bayes_filter.py  ekf_localization.py  pf_localization.py
Mapping/: probabilistic_line_extraction.py
PathTracking/: PurePursuit.py
PythonRobotics/: graphics.py  plots.py  turtlebot.py  vectors.py
RRT_RAPID_path/: LICENSE  README.md  RRT_FND_Q.py
RoboticArm/: NLinkArm.py  two_joint_arm.py
_modules/: index.html
_sources/: getting_started_main.rst.txt  how_to_contribute_main.rst.txt
_static/: custom.css  documentation_options.js
docs/: Makefile  README.md  (+14 more)
(+841 files in other folders)
