[tool.poetry]
name = "pythonrobotics"
version = "2.0.0"
description = "Python sample codes for robotics algorithms."
authors = ["Atsushi Sakai <asakai.amsl+github@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.0"
scipy = "^1.7.0"
pandas = "^1.3.0"
matplotlib = "^3.4.2"
cvxpy = "^1.1.13"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-xdist = "^2.3.0"
mypy = "^0.910"
Sphinx = "^4.0.3"
pycodestyle = "^2.7.0"

[tool.pylint."MESSAGES CONTROL"]
# bad-continuation - pylint sometimes complains about black's formatting; we go with black
# logging-format-interpolation, logging-fstring-interpolation, logging-not-lazy
# - pylint wants deferred formatting for log messages (to use less CPU if that
#   log level is disabled). We prefer the legibility of f-strings: f"a is {a}"
disable = [
    "consider-using-enumerate",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
