[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atsushi_robotics"
version = "0.0.1"
authors = [
  { name="Atsushi Sakai", email="asakaig@gmail.com" },
  { name="Abinash Satapathy", email="contact@abinash.nl"}
]
description = "Quick robotics algorithms"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/AtsushiSakai/PythonRobotics"
"Bug Tracker" = "https://github.com/AtsushiSakai/PythonRobotics/issues"